--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.14.11",
     "@mui/system": "^5.14.11",
     "@reduxjs/toolkit": "^1.9.6",
+    "@stripe/stripe-js": "^2.1.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
