--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.13.6",
     "@strapi/strapi": "4.13.6",
     "better-sqlite3": "8.6.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "stripe": "^13.8.0"
   },
   "author": {
     "name": "A Strapi developer"
