--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.13.6",
-    "@strapi/plugin-users-permissions": "4.13.6",
-    "@strapi/strapi": "4.13.6",
-    "better-sqlite3": "8.6.0",
-    "cors": "^2.8.5",
-    "stripe": "^13.8.0"
+    "@strapi/plugin-i18n": "4.3.8",
+    "@strapi/plugin-users-permissions": "4.3.8",
+    "@strapi/strapi": "4.3.8",
+    "better-sqlite3": "7.4.6",
+    "stripe": "^10.8.0"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Natalie Benjes"
   },
   "strapi": {
     "uuid": "209b2381-4eed-43a0-b9ee-2b54e3f3a4d3"
