--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.3.8",
     "@strapi/strapi": "4.3.8",
     "better-sqlite3": "7.4.6",
+    "strapi-stripe": "^3.4.1",
     "stripe": "^10.8.0"
   },
   "author": {
