--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "stripe": "^13.8.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
