--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "uuid": "209b2381-4eed-43a0-b9ee-2b54e3f3a4d3"
   },
   "engines": {
-    "node": ">=16.0.0 <=20.x.x",
+    "node": "14.19.1",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
