--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.3.8",
     "@strapi/plugin-users-permissions": "4.3.8",
+    "@strapi/provider-upload-cloudinary": "^4.16.2",
     "@strapi/strapi": "4.3.8",
     "better-sqlite3": "7.4.6",
     "pg": "^8.11.3",
